--- a/src/views/partials/navbar.hbs
+++ b/src/views/partials/navbar.hbs
@@ -106,7 +106,7 @@
         logoutButton.textContent = 'Log out';
         logoutButton.classList.add('bg-white', 'text-red-salsa', 'font-medium', 'px-4', 'py-2', 'rounded-xl', 'hover:bg-[#f5f5f5]', 'dark:bg-eerie-black');
         logoutButton.onclick = function () {
-            window.location.href = '/login';
+            window.location.href = '/logout';
         };
 
         popup.appendChild(logoutButton);
