--- a/src/views/partials/toast.hbs
+++ b/src/views/partials/toast.hbs
@@ -1,6 +1,6 @@
 <!-- Toast Success -->
 <div id="toast-success"
-    class="max-w-xs bg-teal-500 text-sm text-white rounded-xl shadow-lg hidden fixed top-4 right-4 z-[2000] space-y-4 opacity-100 transition-opacity duration-300"
+    class="max-w-xs bg-teal-500 text-sm text-white rounded-xl shadow-lg hidden fixed md:top-4 md:right-4 top-16 right-4 z-[2000] space-y-4 opacity-100 transition-opacity duration-300"
     role="alert" tabindex="-1" aria-labelledby="hs-toast-solid-color-teal-label">
     <div id="hs-toast-solid-color-teal-label" class="flex p-4 success-toast-message">
         Profile updated successfully!
@@ -23,7 +23,7 @@
 
 <!-- Toast Error -->
 <div id="toast-error"
-    class="max-w-xs bg-red-500 text-sm text-white rounded-xl shadow-lg hidden fixed top-4 right-4 z-[2000] space-y-4 opacity-100 transition-opacity duration-300"
+    class="max-w-xs bg-red-500 text-sm text-white rounded-xl shadow-lg hidden fixed md:top-4 md:right-4 top-16 right-4 z-[2000] space-y-4 opacity-100 transition-opacity duration-300"
     role="alert" tabindex="-1" aria-labelledby="hs-toast-solid-color-red-label">
     <div id="hs-toast-solid-color-red-label" class="flex p-4 error-toast-message">
         There was an error updating your profile!
